@@ -1,7 +1,10 @@
 2017-11-22  Jean-Louis Martineau <JMartineau@carbonite.com>
+	*  server-src/planner.c: Fix compilation
+
+2017-11-22  Jean-Louis Martineau <JMartineau@carbonite.com>
 	* perl/Amanda/Amflush.pm, server-src/driver.c: rename .tmp holding
 	  files
-	*  server-src/planner.c: Use DUMP_LEVELS
+	* server-src/planner.c: Use DUMP_LEVELS
 
 2017-11-22  Jean-Louis Martineau <JMartineau@carbonite.com>
 	* server-src/holding.c: Fix to take pid lock
